--- a/boilerplate/r5/index.html
+++ b/boilerplate/r5/index.html
@@ -49,7 +49,7 @@
 		document.body.appendChild( renderer.domElement );
 
 		camera = new THREE.PerspectiveCamera( 10, window.innerWidth / window.innerHeight, 1, 5000 );
-		camera.position.set( 1000, 1000, 1000 );
+		camera.position.set( 2000, 2000, 2000 );
 
 		controls = new THREE.TrackballControls( camera, renderer.domElement );
 
@@ -63,12 +63,15 @@
 		
 		var loader = new THREE.OBJLoader();
 		loader.load( 'CPRMan.obj', function ( object ) {
-			object.rotation.y = 45 * Math.PI/180;
-			object.rotation.z = 45 * Math.PI/180;
-			object.position.y = -400;
-			object.scale.x = 40;
-			object.scale.y = 40;
-			object.scale.z = 40;
+			object.rotation.x = 90 * Math.PI/180;
+			object.rotation.y = 180 * Math.PI/180;
+			object.rotation.z = 270 * Math.PI/180;
+			object.position.y = 0;
+			object.position.x = 1200;
+			object.position.z = 0;
+			object.scale.x = 80;
+			object.scale.y = 80;
+			object.scale.z = 80;
 
 			scene.add( object );
 		});
