Changed index.html title

--- a/boilerplate/r5/index.html
+++ b/boilerplate/r5/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang=en >
 <head>
-<title>Leap Threejs Template R5</title>
+<title>VRCPR</title>
 <meta charset=utf-8 />
 </head>
-
 
 
 <body>
