Commented out axes

--- a/boilerplate/r5/index.html
+++ b/boilerplate/r5/index.html
@@ -230,8 +230,8 @@
 			scene.add( object );
 		});
 // axes
-		var axis = new THREE.AxisHelper( 250 );
-		scene.add( axis );
+		// var axis = new THREE.AxisHelper( 250 );
+		// scene.add( axis );
 
 		renderer.render( scene, camera );
 
